# rules_copybara

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  PLAN.md  README.md  copybara.bzl  dprint.json  lefthook.yml
.bcr/: presubmit.yml
.github/workflows/: ci.yml  release.yml
e2e/smoke/: BUILD.bazel  MODULE.bazel  copy.bara.sky
examples/basic/: BUILD.bazel  MODULE.bazel  copy.bara.sky
private/: BUILD.bazel
tests/: BUILD.bazel
tests/testdata/: simple.bara.sky
