"""rules_copybara - Bazel rules for running Copybara workflows."""

module(
    name = "rules_copybara",
    # NOTE: version = "" - Always leave unset or empty.
    # The default value prevents issues with non-registry overrides.
    # Registry publish.yaml patches this during release.
)

# Core dependencies
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_java", version = "7.4.0")

# Default copybara from BCR (users can override via archive_override/local_path_override)
bazel_dep(name = "copybara", version = "0.0.0-20250728-6672ce2")

# Dev dependencies
bazel_dep(name = "buildifier_prebuilt", version = "8.0.1", dev_dependency = True)
